--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Dogs World</string>
+    <string name="like">like</string>
+    <string name="download">Download</string>
+    <string name="favorite">favorite</string>
 </resources>
